--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,4 @@
-include ':FtcRobotController', ':openCVLibrary3', ':DogeCV'
+include ':FtcRobotController'
+include ':openCVLibrary3'
+include ':DogeCV'
 include ':TeamCode'
